--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,7 @@ server.ssl.key-store-password = colorete
 # The alias mapped to the certificate
 server.ssl.key-alias = gateway
 #security.require-ssl = true
+
+database.backup.folder=C:/backups/
+database.backup.mysql.folder=C:/Program Files/MySQL/MySQL Server 8.0/bin/
+database.backup.maximum.files=5
